Fix write in file